# nextrows-py

./: .gitignore  AGENTS.md  LICENSE.md  README.md  port-plan.md  pyproject.toml
.github/workflows/: ci.yml
js-ref/: AGENTS.md  CHANGELOG.md  IMPLEMENTATION_STATUS.md  README.md  biome.jsonc  package-lock.json  package.json  tsconfig.json  vitest.config.ts
js-ref/.github/workflows/: publish.yml  tag-on-version-change.yml
js-ref/src/api/: apps.ts  credits.ts  extract.ts
js-ref/src/client/: index.test.ts  index.ts
src/nextrows/: __init__.py  client.py  types.py
src/nextrows/api/: apps.py  credits.py  extract.py
tests/: test_extract_payload.py
