[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextrows"
version = "0.1.0"
description = "Python client for the Nextrows Open API."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }
authors = [
  { name = "workbricksai" }
]
keywords = ["nextrows", "api", "client"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests>=2.31",
  "typing-extensions>=4.7",
]

[project.optional-dependencies]
schema = ["pydantic>=1.10"]

[project.urls]
Homepage = "https://nextrows.com"
Documentation = "https://nextrows.com/docs/api"
Repository = "https://nextrows.com"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nextrows*"]
